--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,6 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
+
     <servlet>
         <servlet-name>HelloServlet</servlet-name>
         <servlet-class>servlets.HelloServlet</servlet-class>
@@ -10,5 +15,41 @@
     <servlet-mapping>
         <servlet-name>HelloServlet</servlet-name>
         <url-pattern>/HelloServlet</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>IndexServlet</servlet-name>
+        <servlet-class>servlets.IndexServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>IndexServlet</servlet-name>
+        <url-pattern>/index</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>DirEntryServlet</servlet-name>
+        <servlet-class>servlets.DirEntryServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>DirEntryServlet</servlet-name>
+        <url-pattern>/dir</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>FileDownloadServlet</servlet-name>
+        <servlet-class>servlets.FileDownloadServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>FileDownloadServlet</servlet-name>
+        <url-pattern>/downloadFile</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>OpenTxtServlet</servlet-name>
+        <servlet-class>servlets.OpenTxtServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>OpenTxtServlet</servlet-name>
+        <url-pattern>/openTxt</url-pattern>
     </servlet-mapping>
 </web-app>
